<resources>
    <string name="app_name">LeetHub</string>
    <string name="search">Search</string>

    <string name="title_activity_question_detail">QuestionDetailActivity</string>
    <string name="question_detail_button_content">Show Solution</string>
    <string name="nav_all">All</string>
    <string name="nav_topics">Topics</string>
    <string name="nav_difficulty">Difficulty</string>
    <string name="nav_sync">Sync</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>

    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>

    <string name="question_difficulty_easy">Easy</string>
    <string name="question_difficulty_medium">Medium</string>
    <string name="question_difficulty_hard">Hard</string>

    <string name="tab_question_difficulty_1">Easy</string>
    <string name="tab_question_difficulty_2">Medium</string>
    <string name="tab_question_difficulty_3">Hard</string>

    <string name="question_description">Description</string>

    <string name="question_solution">Solution</string>
    <string name="nav_header_text">Login</string>

    <!-- Problem Detail -->
    <string name="problem_description">Description</string>
    <string name="problem_solution">Solution</string>
    <string name="problem_submissions">Submissions</string>
    <string name="problem_discuss">Discuss</string>
    <string name="no_solution">No solution for this question.</string>

    <!-- Search -->
    <string name="search_hint">搜索</string>

    <string name="transition_search_back" translatable="false">transition_search_back</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="under_development">Under Development</string>


    <!-- Problem -->
    <!-- discuss -->
    <string name="problem_discuss_drop_up_description">drop up</string>
    <string name="problem_discuss_view_eye_description">view</string>
    <string name="discuss_author_update_date">Last Edit</string>
</resources>
