<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/nav_all"
            android:title="@string/nav_all"/>
        <item
            android:id="@+id/nav_topics"
            android:icon="@drawable/nav_topics"
            android:title="@string/nav_topics"/>
        <item
            android:id="@+id/nav_difficulty"
            android:icon="@drawable/nav_difficulty"
            android:title="@string/nav_difficulty"/>
        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/nav_sync"
            android:title="@string/nav_sync"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/nav_settings"
            android:title="@string/nav_settings"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/nav_about"
            android:title="@string/nav_about"/>

    </group>

</menu>